--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<h2 class="title">My Skills</h2>
 			<div class="skills-content">
 				<div class="column left">
-					<div class="text">What My Programming Skills Included?</div>
+					<div class="text">What Is My Skills Included?</div>
 				<p>I develop simple, intuitive and responsive user interface that helps users get things done with less effort and time with those technologies. </p>
 				<a href="#">Read More</a>
 				</div>
